# PafosGame

./: .gitignore  CMakeLists.txt  ConstantBuffer.cpp  ConstantBuffer.h  ConstantStruct.h  Light.h  ModelReader.cpp  ModelReader.h  README.md  RenderUI.cpp  RenderUI.h  Renderer.cpp  Renderer.h  Shaders.cpp  Shaders.h  Texture.h  main.cpp
Core/: BufferManager.h  CMakeLists.txt  Camera.cpp  Camera.h  D3DManager.cpp  D3DManager.h  GPUManager.cpp  GPUManager.h  GameCore.h  Shader.h  Window.cpp  Window.h
assets/Shaders/: PixelShader.hlsl  VertexShader.hlsl
geometry/: Cube.cpp  Cube.h  GeometryPrimitive.cpp  GeometryPrimitive.h  Vertex.h
imgui/: CMakeLists.txt
libs/: Window.cpp  Window.h
